--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack-dev-server --env=dev --progress --profile --colors",
+    "build": "webpack-dev-server --env=dev --devtool source-map --progress --profile --colors",
     "prod": "npm run clean && webpack --env=prod --progress --profile --colors",
     "clean": "rimraf ./dist/*"
   },
